bugfix issue #6 + event click for enableEdit

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ div, textarea{
   top:0;
   right: 0;
   z-index: 2;
-  /*background-color: #ff9966;*/
+  background-color: #ffffff;
 }
 .ui-icon{
   display: inline-block;
